adicionados filmes fix vulnerabilidade

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -27,9 +27,17 @@
         <li>Black Mirror Bandersnatch</li>
         <li>Bird Box</li>
         <li>Aquaman</li>
+        <li>Wifi Ralph</li>
+        <li>Homem-Aranha no Aranhaverso</li>
+        <li>Como Treinar Seu Dragão 3</li>
+        <li>Alita - Maquina de Combate</li>
+        <li>Capitã Marvel</li>
     </ul>
     
     <h5>Séries:</h5>
+    <ul>
+        <li>Shooter (Netflix) - S01</li>
+    </ul>
     
     <h5>Animes:</h5>
     
